--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </nav>
 
                 <div style="display: flex; align-items: center; gap: 0.5rem;">
-                    <a href="tel:+918688575143" class="mobile-menu-btn" style="font-size: 1.25rem;">📞</a>
+                    <a href="tel:+918688575143" class="mobile-menu-btn" style="font-size: 1.25rem; text-decoration: none;">📞</a>
                     <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
                 </div>
             </div>
